Hack to fix stuck spinner

--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -158,7 +158,7 @@ body {
 
 			#spinnerDiv {
 				height: 100%;
-				display: none;
+				display: flex;
 			}
 
 			.error-msg {
